# Connect_Donut

./: .gitignore  Client.py  Game.py  Network.py  Pieces.py  README.md  Server.py  pyproject.toml
Client/: Client.py  Network.py  Pieces.py
Server/: Game.py  Server.py
